Update GitHub Pages workflow for main and beta branches

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,32 +1,52 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages (main + beta)
+
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [main, beta]
   workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
-concurrency: { group: pages, cancel-in-progress: true }
+concurrency:
+  group: gh-pages-deploy
+  cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - run: npm ci
-      - run: npm run build
-      - uses: actions/upload-pages-artifact@v3
-        with: { path: ./dist }
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install
+        run: npm ci
+
+      - name: Decide base + destination
+        shell: bash
+        run: |
+          if [ "${GITHUB_REF_NAME}" = "beta" ]; then
+            echo "BASE_PATH=/Concorde-EFB/beta/" >> $GITHUB_ENV
+            echo "DEST_DIR=beta" >> $GITHUB_ENV
+          else
+            echo "BASE_PATH=/Concorde-EFB/" >> $GITHUB_ENV
+            echo "DEST_DIR=." >> $GITHUB_ENV
+          fi
+
+      - name: Build (Vite)
+        run: npm run build -- --base="${BASE_PATH}"
+
+      - name: Deploy to gh-pages (root for main, /beta for beta)
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./dist
+          destination_dir: ${{ env.DEST_DIR }}
+          keep_files: true
