--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,8 @@
-name: Deploy (stable) to GitHub Pages
+name: Deploy (stable + beta) to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, beta ]
   workflow_dispatch:
 
 permissions:
@@ -24,15 +24,35 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Typecheck
+        run: npx tsc -b
+
+      - name: Build (stable)
+        if: github.ref_name == 'main'
+        run: npx vite build --base=/${{ github.event.repository.name }}/
+
+      - name: Build (beta)
+        if: github.ref_name == 'beta'
+        run: npx vite build --base=/${{ github.event.repository.name }}/beta/
 
       - name: Disable Jekyll
         run: touch dist/.nojekyll
 
       - name: Deploy (stable)
+        if: github.ref_name == 'main'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
           publish_dir: ./dist
+          keep_files: true
+
+      - name: Deploy (beta)
+        if: github.ref_name == 'beta'
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./dist
+          destination_dir: beta
           keep_files: true
