update pages.yml for beta staging

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,6 +8,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: pages-${{ github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,25 +28,35 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Typecheck
+        run: npx tsc -b
+
+      - name: Build (stable)
+        if: github.ref_name == 'main'
+        run: npx vite build --base=/${{ github.event.repository.name }}/
+
+      - name: Build (beta)
+        if: github.ref_name == 'beta'
+        run: npx vite build --base=/${{ github.event.repository.name }}/beta/
 
       - name: Disable Jekyll
         run: touch dist/.nojekyll
 
       - name: Deploy (stable)
-        if: ${{ github.ref_name == 'main' }}
+        if: github.ref_name == 'main'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
           publish_dir: ./dist
           keep_files: true
 
       - name: Deploy (beta)
-        if: ${{ github.ref_name == 'beta' }}
+        if: github.ref_name == 'beta'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
           publish_dir: ./dist
           destination_dir: beta
           keep_files: true
