--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - "v*.*.*"
+      - "v*.*.*"          # stable semver tags (v0.9.0)
+      - "v*rc*"           # RC tags like v0.9rc1
+      - "v*.*.*-rc.*"     # RC semver tags like v0.9.0-rc.1
 
 jobs:
   build-windows:
